[package]
name = "pm"
version = "0.1.0"
edition = "2024"
description = "Bulk project management — apply YAML/JSON specs to issue trackers (GitHub, ...)"
authors = ["Anatta <noreply@anatta.dev>"]
license = "Apache-2.0"
repository = "https://github.com/anatta-rs/pm"
keywords = ["github", "issues", "bulk", "cli", "pm"]
categories = ["command-line-utilities", "api-bindings"]

[features]
default = ["github"]
github = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
httpmock = "0.7"
mockito = "1"
pretty_assertions = "1"
tokio = { version = "1", features = ["test-util"] }

[[bin]]
name = "pm"
path = "src/bin/pm.rs"

[[bin]]
name = "pm-status"
path = "src/bin/pm-status.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
