[package]
name = "pm-cli"
description = "Apply YAML/JSON specs of issues + milestones to a project tracker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["github", "issues", "bulk", "cli", "pm"]
categories = ["command-line-utilities", "asynchronous"]

[[bin]]
name = "pm"
path = "src/main.rs"

[[bin]]
name = "pm-status"
path = "src/bin/pm-status.rs"

[lib]
path = "src/lib.rs"

[dependencies]
pm-core = { workspace = true }
pm-github = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
