[package]
name = "pm-core"
description = "Project-management abstraction — IssueTracker trait + Issue/Milestone/Label types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["github", "issues", "milestones", "project-management"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
