[package]
name = "pm-github"
description = "GitHub Issues backend for the pm IssueTracker trait"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["github", "issues", "milestones", "labels", "pm"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
pm-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
