[package]
name = "pm-graph"
description = "Project pm-core issues/milestones/labels onto a polystore::GraphStore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["github", "issues", "graph", "polystore", "pm"]
categories = ["api-bindings", "database"]

[dependencies]
pm-core = { workspace = true }
polystore = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
testcontainers = "0.17"
testcontainers-modules = { version = "0.5", features = ["neo4j"] }
neo4rs = "0.7"

[features]
e2e-neo4j = []

[lints]
workspace = true
